--- a/css/main.css
+++ b/css/main.css
@@ -23,33 +23,33 @@ header {
 	padding-left: 100px;
 }
 
-header nav ul {
+.header-navigation ul {
 	list-style: none;
 	padding-right: 50px;
 	margin: 0;
 }
 
-header nav ul li {
+.header-navigation ul li {
 	margin-right: 50px;
 }
 
-header nav ul li a {
+.header-navigation ul li a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 18px;
 }
 
-header nav ul li a:hover {
+.header-navigation ul li a:hover {
 	border-bottom: 2px solid #39b9ef;
 }
 
-header nav ul li:last-child {
+.header-navigation ul li:last-child {
 	margin-left: 30px;
 }
 
 /*Header Main Text*/
 
-.header_main_text h1 {
+.header-mainText h1 {
 	margin-top: 250px;
 	margin-bottom: 0;
 	text-align: center;
@@ -58,11 +58,11 @@ header nav ul li:last-child {
 	font-weight: bold;
 }
 
-.header_main_text span {
+.header-mainText span {
 	color: #39b9ef;
 }
 
-.header_main_text p {
+.header-mainText p {
 	margin-top: 14px;
 	margin-bottom: 75px;
 	font-size: 24px;
@@ -82,4 +82,14 @@ header nav ul li:last-child {
 	text-decoration: none;
 	font-size: 18px;
 	font-weight: bold;
+}
+
+/***********************  
+*******OUR SERVICES*****
+************************/
+
+.our-services h2 {
+	color: #242424;
+	font-size: 48px;
+	text-align: center;
 }
