--- a/css/main.css
+++ b/css/main.css
@@ -14,22 +14,26 @@ header {
 
 /*Header Menu*/
 
-.header_menu {
+.header-menu {
 	height: 134px;
 	background: rgba(0, 0, 0, 0.4);
+}
+
+.header-menu-flex {
+	height: 134px;
 }
 
 .header_logo {
 	padding-left: 100px;
 }
 
-.header-navigation ul {
+.header-navigation ul, .footer-navigation ul {
 	list-style: none;
 	padding-right: 50px;
 	margin: 0;
 }
 
-.header-navigation ul li {
+.header-navigation ul li, .footer-navigation ul li {
 	margin-right: 50px;
 }
 
@@ -58,7 +62,7 @@ header {
 	font-weight: bold;
 }
 
-.header-mainText span {
+.color-blue {
 	color: #39b9ef;
 }
 
@@ -78,7 +82,7 @@ header {
 	border-radius: 50px;
 	text-align: center;
 	margin: 0 auto;
-	line-height: 50px;
+	line-height: 46px;
 	font-size: 18px;
 	font-weight: bold;
 	text-decoration: none !important;
@@ -142,7 +146,7 @@ header {
 	color: #fff;
 }
 
-.services-button_2, .services-button_3, .lm-btn, .footer-check_btn {
+.services-button_2, .services-button_3, .lm-btn, .chk-our_btn {
 	margin: 50px 0 0 0;
 	width: 150px;
 	height: 45px;
@@ -220,10 +224,10 @@ header {
 }
 
 /***********************  
-********FOOTER**********
+********CHECK OUR**********
 ************************/
 
-.footer-check_btn {
+.chk-our_btn {
 	margin: 0 0 110px 0;
 }
 
@@ -234,6 +238,148 @@ header {
 	margin: 100px 0 110px 0;
 }
 
-.chk-our h2 span {
-	color: #2ebaee;
+.chk-our h3 {
+	margin-top: 8px;
 }
+
+/***********************  
+********FOOTER**********
+************************/
+
+.footer {
+	background: url(../img/footer/footer-bg.jpg) no-repeat center center;
+	height: 724px;
+}
+
+.footer-text1 h1 {
+	font-size: 72px;
+	color: #fff;
+	font-weight: bold;
+	margin: 115px 0 71px 0;
+}
+
+.footer-text1 p {
+	font-size: 18px;
+	color: #878787;
+	margin-bottom: 30px;
+}
+
+.footer-text1 h3 {
+	color: #878787;
+	font-size: 30px;
+}
+
+.social-ico {
+	list-style-type: none;
+	margin-top: 70px;
+	padding: 0;
+}
+
+.social-ico li {
+	display: inline-block;
+	width: 55px;
+	height: 55px;
+	border-radius: 27px;
+	margin-right: 35px;
+}
+
+.facebook {
+	background: #55acee;
+	padding: 16px 23px;
+}
+
+.twitter {
+	background: #3b5998;
+	padding: 16px 16px;
+}
+
+.pinterest {
+	background: #cc2127;
+	padding: 17px 20px;
+}
+
+.google {
+	background: #dd4b39;
+	padding: 16px 19px;
+}
+
+.email {
+	background: #e23047;
+	padding: 16px 17px;
+}
+
+.social-ico li:hover {
+	background: rgba(130, 130, 130, 0.6);
+	cursor: pointer;
+}
+
+.footer input[type="text"], .footer input[type="email"] {
+	width: 635px;
+	height: 60px;
+	background: none;
+	border-radius: 6px;
+	border: 1px solid #535353;
+	color: #fff;
+	font-size: 17px;
+	display: block;
+	padding-left: 30px;
+	margin: 20px auto;
+}
+
+.footer input[type="text"] {
+	margin-top: 126px;
+}
+
+.footer textarea {
+	width: 635px;
+	height: 200px;
+	background: none;
+	border-radius: 6px;
+	border: 1px solid #535353;
+	color: #fff;
+	font-size: 17px;
+	display: block;
+	padding: 30px;
+	margin: 20px auto;
+	resize: none;
+}
+
+.footer button {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	background: #2ebaee;
+	width: 150px;
+	height: 45px;
+	border-radius: 24px;
+	color: #fff;
+	line-height: 44px;
+	font-size: 14px;
+	margin: 30px auto;
+	border: none;
+}
+
+footer {
+	height: 137px;
+	background-color: #000;
+}
+
+.footer-nav {
+	height: 137px;
+}
+
+.footer-navigation ul li a {
+	text-decoration: none;
+	color: #b2b2b2;
+	font-size: 14px;
+}
+
+footer p {
+	color: #b2b2b2;
+	margin: 0;
+}
+
+.footer-navigation ul li a:hover {
+	border-bottom: 1px solid #b2b2b2;
+}
+
